@@ -1,3 +1,8 @@
+2000-11-15  jeff hobbs  <jeff.hobbs@acm.org>
+
+	* generic/tclVar.c (TclLookupVar): reverted fix below as it broke
+	all other array unset error reporting.  Bug-119192 is still open.
+
 2000-11-15  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* generic/tclVar.c (TclLookupVar): Changed references to part2 to
